Try fix spacings for headings

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -65,6 +65,11 @@ h4 b {
   margin-bottom: 15px !important;
 }
 
+.block-content .block-richtext * {
+  margin-top: 10px;
+  width: 97%;
+}
+
 .block-richtext h2 a,
 .block-richtext h3 a,
 .block-richtext h4 {
@@ -81,10 +86,10 @@ h4 b {
   font-family: inherit;
 }
 
-.block-richtext h2 + * {
+.block-content .block-richtext h2 + * {
   margin-top: 1.75rem;
 }
-.block-richtext h3 + * {
+.block-content .block-richtext h3 + * {
   margin-top: 1rem;
 }
 
@@ -197,9 +202,4 @@ main.container > div > .container {
   main.container.container-inner {
     flex-direction: column;
   }
-}
-
-.block-content .block-richtext * {
-  margin: 10px 0;
-  width: 97%;
 }
